--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script>
       console.log("bu benim ilk internal scriptim!");
     </script>
-    <script src="./introduction.js"></script>
   </head>
   <body>
     <button onclick="alert('Welcome to 30DaysOfJavaScript!')">Click Me</button>
@@ -13,5 +12,8 @@
     <script>
       console.log("bu benim ilk internal scriptim ama bodyde tanimli olani");
     </script>
+
+    <script src="./helloworld.js"></script>
+    <script src="./introduction.js"></script>
   </body>
 </html>
