--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       console.log("bu benim ilk internal scriptim ama bodyde tanimli olani");
     </script>
 
-    <script src="./helloworld.js"></script>
     <script src="./introduction.js"></script>
+    <script src="./helloworld.js"></script>
+    <script src="./variables.js"></script>
+    <script src="./datatype.js"></script>
   </body>
 </html>
